Выполнил: 1. Реализовать локальное кэширование данных пользователя. 2. Реализовать поиск по списку пользователей

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="ff_medium">sans-serif-medium</string>
     <string name="view_profile">Просмотр</string>
     <string name="first_name_second_name">Фамилия Имя</string>
+    <string name="user_search">Поиск пользователя</string>
 </resources>
